obfuscation made REALLY complex

--- a/caerulean/whirlpool/Dockerfile
+++ b/caerulean/whirlpool/Dockerfile
@@ -5,16 +5,18 @@ WORKDIR /seaside/caerulean
 RUN apk add --no-cache protobuf protobuf-dev
 RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
 
+COPY caerulean/whirlpool/go.mod ./
+RUN go get ./...
+
 COPY vessels ./vessels
 RUN protoc -I=vessels --go_out=. --experimental_allow_proto3_optional vessels/*.proto
 
-COPY caerulean/whirlpool/go.mod ./
 COPY caerulean/whirlpool/sources ./sources
 COPY caerulean/whirlpool/tunnel ./tunnel
 COPY caerulean/whirlpool/crypto ./crypto
 COPY caerulean/whirlpool/users ./users
 COPY caerulean/whirlpool/utils ./utils
-RUN go get ./... && go mod tidy
+RUN go mod tidy
 
 RUN go build -o whirlpool.run ./sources
 
