--- a/caerulean/whirlpool/Dockerfile
+++ b/caerulean/whirlpool/Dockerfile
@@ -11,11 +11,7 @@ RUN go get ./...
 COPY vessels ./vessels
 RUN protoc -I=vessels --go_out=. --experimental_allow_proto3_optional vessels/*.proto
 
-COPY caerulean/whirlpool/sources ./sources
-COPY caerulean/whirlpool/tunnel ./tunnel
-COPY caerulean/whirlpool/crypto ./crypto
-COPY caerulean/whirlpool/users ./users
-COPY caerulean/whirlpool/utils ./utils
+COPY caerulean/whirlpool ./
 RUN go mod tidy
 
 RUN go build -o whirlpool.run ./sources
