--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,14 +21,16 @@ jobs:
         with:
           go-version: "^1.20.4"
 
+      - name: Install Protoc 💾
+        uses: arduino/setup-protoc@v2
+        with:
+          version: "24.4"
+
       - name: Install Dependencies 🔮
         run: |
           sudo apt-get install -y protobuf-compiler
           go install golang.org/x/lint/golint@latest
           go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
-
-      - name: Generate Code 🗜
-        run: protoc -I=. --go_out=caerulean/whirlpool --experimental_allow_proto3_optional vessels/*.proto
 
       - name: Lint Caerulean Whirlpool 🧪
         run: make lint-whirlpool
