--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,6 +48,11 @@ jobs:
         with:
           go-version: "^1.20.4"
 
+      - name: Install Protoc 💾
+        uses: arduino/setup-protoc@v2
+        with:
+          version: "24.4"
+
       - name: Install Dependencies 🔮
         run: |
           sudo apt-get install -y protobuf-compiler
@@ -55,4 +60,4 @@ jobs:
           go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
 
       - name: Test Caerulean Whirlpool 🧪
-        run: make -C caerulean/whirlpool -s test
+        run: make test-whirlpool
