--- a/viridian/algae/docker/compose.integration.yml
+++ b/viridian/algae/docker/compose.integration.yml
@@ -11,6 +11,7 @@ services:
     environment:
       LOG_LEVEL: DEBUG
       OWNER_KEY: SuperSafeNodeOwnerKey
+      PUBLIC_KEY: 5e46857bc554cce1e1c1b94a00c41189cde7eafb116500598b211c10bb3c3148
       NODE_ADDR: 10.65.0.87
     networks:
       sea-client:
@@ -26,6 +27,7 @@ services:
     environment:
       LOG_LEVEL: DEBUG
       OWNER_KEY: SuperSafeNodeOwnerKey
+      PUBLIC_KEY: 5e46857bc554cce1e1c1b94a00c41189cde7eafb116500598b211c10bb3c3148
       ADDRESS: 10.65.0.87
       EXTERNAL: 10.87.0.87
     networks:
