--- a/viridian/algae/docker/compose.unit.yml
+++ b/viridian/algae/docker/compose.unit.yml
@@ -9,4 +9,4 @@ services:
       context: ../../..
       target: sleeping
     environment:
-      NODE_ADDR: 10.65.0.65
+      SEASIDE_ADDRESS: 10.65.0.65
