--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -37,21 +37,17 @@ COPY --from=builder /seaside/algae/generated ./sources/generated/
 COPY viridian/algae/sources/*.py ./sources/
 COPY viridian/algae/tests/*.py ./tests/
 
-ENV LOG_LEVEL DEBUG
+ENV SEASIDE_PUBLIC=
+ENV SEASIDE_PAYLOAD_OWNER=
+ENV SEASIDE_ADDRESS=
+ENV SEASIDE_NETPORT=
+ENV SEASIDE_NAUTICHART=
 
-ENV OWNER_KEY none
-ENV PUBLIC_KEY none
-ENV TUNNEL seatun
-ENV NODE_ADDR 127.0.0.1
-ENV NET_PORT 8587
-ENV SEA_PORT 8542
-ENV CTRL_PORT 8543
-ENV MIN_HC_TIME 1
-ENV MAX_HC_TIME 5
+ENV SEASIDE_TUNNEL_NAME seatun
+ENV SEASIDE_MIN_HC_TIME 1
+ENV SEASIDE_MAX_HC_TIME 5
 
-EXPOSE $SEA_PORT/udp
-EXPOSE $CTRL_PORT/tcp
-ENTRYPOINT python3 -m sources.main $PUBLIC_KEY $OWNER_KEY -t $TUNNEL -a $NODE_ADDR -n $NET_PORT -p $SEA_PORT -c $CTRL_PORT -i $MIN_HC_TIME -x $MAX_HC_TIME
+ENTRYPOINT python3 -m sources.main $SEASIDE_PUBLIC $SEASIDE_PAYLOAD_OWNER -a $SEASIDE_ADDRESS -n $SEASIDE_NETPORT -c $SEASIDE_NAUTICHART -t $SEASIDE_TUNNEL_NAME -s $SEASIDE_MIN_HC_TIME -b $SEASIDE_MAX_HC_TIME
 
 
 FROM seaside-algae-default as sleeping
@@ -68,6 +64,6 @@ ENV ARG_NETWORK_GATEWAY $NETWORK_GATEWAY
 
 RUN apt-get update && apt-get install -y --no-install-recommends iproute2 iputils-ping && rm -rf /var/lib/apt/lists/*
 ENTRYPOINT ip route replace default via $ARG_NETWORK_GATEWAY && \
-    python3 -m sources.main $PUBLIC_KEY $OWNER_KEY -t $TUNNEL -a $NODE_ADDR -n $NET_PORT -p $SEA_PORT -c $CTRL_PORT -i $MIN_HC_TIME -x $MAX_HC_TIME
+    python3 -m sources.main $SEASIDE_PUBLIC $SEASIDE_PAYLOAD_OWNER -a $SEASIDE_ADDRESS -n $SEASIDE_NETPORT -t $SEASIDE_TUNNEL_NAME -s $SEASIDE_MIN_HC_TIME -b $SEASIDE_MAX_HC_TIME
 
-HEALTHCHECK --interval=3s --timeout=1s --retries=3 --start-period=10s CMD ls /sys/class/net | grep $TUNNEL
+HEALTHCHECK --interval=3s --timeout=1s --retries=3 --start-period=10s CMD ls /sys/class/net | grep $SEASIDE_TUNNEL_NAME
