--- a/viridian/algae/docker/compose.base.yml
+++ b/viridian/algae/docker/compose.base.yml
@@ -8,12 +8,12 @@ services:
     build:
       dockerfile: Dockerfile.algae
       target: smoke
+    env_file:
+      - test.conf.env
     environment:
-      LOG_LEVEL: DEBUG
+      SEASIDE_LOG_LEVEL: DEBUG
       BUFFER_SIZE: 8192  # Buffer for echo server message storing
-      LOCAL_ECHO_PORT: 5000  # Port for echo server accessing
-      OWNER_KEY: SuperSafeNodeOwnerKey  # Whirlpool node owner key
-      PUBLIC_KEY: 5e46857bc554cce1e1c1b94a00c41189cde7eafb116500598b211c10bb3c3148  # Whirlpool node public key
+      ECHO_PORT: 5000  # Port for echo server accessing
 
   whirlpool:
     image: seaside-whirlpool-smoke
@@ -23,9 +23,9 @@ services:
       dockerfile: Dockerfile.whirlpool
       target: smoke
     environment:
-      LOG_LEVEL: DEBUG
-      OWNER_KEY: SuperSafeNodeOwnerKey  # Whirlpool node owner key
-      PUBLIC_KEY: 5e46857bc554cce1e1c1b94a00c41189cde7eafb116500598b211c10bb3c3148  # Whirlpool node public key
+      SEASIDE_LOG_LEVEL: DEBUG
+    env_file:
+      - test.conf.env
 
   echo:
     image: seaside-echo-smoke
