--- a/caerulean/whirlpool/Dockerfile
+++ b/caerulean/whirlpool/Dockerfile
@@ -33,6 +33,9 @@ ENV SEASIDE_AUTH auth
 ENV SEASIDE_MAX_USERS 10
 ENV SEASIDE_MAX_ADMINS 5
 
+ENV SEASIDE_TUNNEL_MTU 1500
+ENV SEASIDE_LOG_LEVEL WARNING
+
 EXPOSE $SEASIDE_SEAPORT/udp
 EXPOSE $SEASIDE_CTRLPORT/tcp
 EXPOSE $SEASIDE_NETPORT/tcp
