--- a/caerulean/whirlpool/example.conf.env
+++ b/caerulean/whirlpool/example.conf.env
@@ -14,5 +14,10 @@ SEASIDE_MAX_USERS=10
 SEASIDE_MAX_ADMINS=5
 
 SEASIDE_TUNNEL_MTU=1500
+SEASIDE_VPN_DATA_LIMIT=-1
+SEASIDE_CONTROL_PACKET_LIMIT=2
+SEASIDE_HTTP_PACKET_LIMIT=3
+SEASIDE_ICMP_PACKET_LIMIT=5
+SEASIDE_BURST_LIMIT_MULTIPLIER=3
 
 SEASIDE_LOG_LEVEL=WARNING
