--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -49,7 +49,9 @@ jobs:
           python-version: "3.10"
 
       - name: Install Dependencies 🔮
-        run: pip3 install poetry
+        run: |
+          pip3 install poetry
+          poetry -C viridian/algae install --without client
 
       - name: Lint Viridian Algae 🧪
         run: make lint-algae
