--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -49,9 +49,7 @@ jobs:
           python-version: "3.10"
 
       - name: Install Dependencies 🔮
-        run: |
-          pip3 install poetry
-          poetry -C viridian/algae install --without client
+        run: poetry -C viridian/algae install
 
       - name: Lint Viridian Algae 🧪
         run: make lint-algae
