gitignore instead of multiple copy calls

--- a/caerulean/whirlpool/Makefile
+++ b/caerulean/whirlpool/Makefile
@@ -7,11 +7,8 @@ EXECUTABLE_NAME = whirlpool.run
 
 
 
-generate:
+build:
 	protoc -I=../../ --go_out=. ../../vessels/*.proto
-.PHONY: generate
-
-build: generate
 	go mod tidy
 	go build -o build/$(EXECUTABLE_NAME) ./sources
 .PHONY: build
@@ -27,20 +24,20 @@ format: build
 
 
 build-docker-prod:
-	docker build -f Dockerfile.prod -t seaside-whirlpool-prod ../..
+	DOCKER_BUILDKIT=1 docker build -f Dockerfile -t seaside-whirlpool-prod ../..
 .PHONY: build-docker-prod
 
 run-docker: build-docker-prod
-	docker run -it --rm --name seaside-whirlpool-run seaside-whirlpool-prod
+	docker run -it --rm --name seaside-whirlpool-run seaside-whirlpool-prod ../..
 .PHONY: run-docker
 
 
 
-build-docker-test: generate
+build-docker-test:
 ifndef CI
-	docker build -f Dockerfile.test -t seaside-whirlpool-test .
+	DOCKER_BUILDKIT=1 docker build -f Dockerfile.test -t seaside-whirlpool-test ../..
 else
-	docker build -f Dockerfile.test -t seaside-whirlpool-test -q .
+	DOCKER_BUILDKIT=1 docker build -f Dockerfile.test -t seaside-whirlpool-test -q ../..
 endif
 .PHONY: build-docker-test
 
