--- a/caerulean/whirlpool/Dockerfile.test
+++ b/caerulean/whirlpool/Dockerfile.test
@@ -2,16 +2,13 @@ FROM golang:1.20-alpine3.17 as builder
 
 WORKDIR /seaside/caerulean
 
-RUN apk add --no-cache build-base gmp-dev
+RUN apk add --no-cache protobuf protobuf-dev build-base gmp-dev
+RUN go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
 RUN go install golang.org/x/lint/golint@latest
 
-COPY go.mod ./
-COPY crypto ./crypto
-COPY generated ./generated
-COPY sources ./sources
-COPY tests ./tests
-COPY tunnel ./tunnel
-COPY users ./users
-COPY utils ./utils
+COPY caerulean/whirlpool/go.mod ./
+COPY vessels ./vessels
+RUN protoc -I=vessels --go_out=. vessels/*.proto
 
+COPY caerulean/whirlpool ./
 RUN go mod tidy
