--- a/viridian/algae/docker/compose.default.yml
+++ b/viridian/algae/docker/compose.default.yml
@@ -13,7 +13,7 @@ services:
     image: seaside-whirlpool-default
     privileged: true
     build:
-      dockerfile: caerulean/whirlpool/Dockerfile.prod
+      dockerfile: caerulean/whirlpool/Dockerfile
       context: ../../..
       target: default
 
