--- a/caerulean/whirlpool/example.conf.env
+++ b/caerulean/whirlpool/example.conf.env
@@ -3,7 +3,7 @@ SEASIDE_PAYLOAD_OWNER=SuperSafeNodeOwnerKey
 SEASIDE_PAYLOAD_USER=SuperSafeNodePayloadKey
 
 SEASIDE_ADDRESS=127.0.0.1
-SEASIDE_EXTRNAL=127.0.0.1
+SEASIDE_EXTERNAL=127.0.0.1
 SEASIDE_SEAPORT=8542
 SEASIDE_CTRLPORT=8543
 SEASIDE_NETPORT=8587
