--- a/viridian/algae/docker/Dockerfile.router
+++ b/viridian/algae/docker/Dockerfile.router
@@ -1,9 +1,11 @@
 FROM alpine:3.18 as smoke
 
+ARG RESTRICTED_ADDRESS=0.0.0.0
+ENV ARG_RESTRICTED_ADDRESS $RESTRICTED_ADDRESS
+
 RUN apk add --no-cache iptables
 ENTRYPOINT echo 1 > /proc/sys/net/ipv4/ip_forward && \
+    iptables -t mangle -A PREROUTING -d $ARG_RESTRICTED_ADDRESS -j DROP && \
     iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE && \
     iptables -t nat -A POSTROUTING -o eth1 -j MASQUERADE && \
-    iptables -A FORWARD -i eth0 -j ACCEPT && \
-    iptables -A FORWARD -i eth1 -j ACCEPT && \
     sleep infinity
