--- a/viridian/algae/docker/Dockerfile.echo
+++ b/viridian/algae/docker/Dockerfile.echo
@@ -11,7 +11,7 @@ ENV ECHO_PORT 5000
 COPY docker/echo_server.py ./
 ENTRYPOINT python3 echo_server.py
 
-HEALTHCHECK --interval=3s --timeout=1s --retries=3 --start-period=10s CMD netstat -tulpn | grep -q ":$ECHO_PORT"
+HEALTHCHECK --interval=1m --timeout=1s --retries=3 --start-period=10s --start-interval=3s CMD netstat -tulpn | grep -q ":$ECHO_PORT"
 
 
 FROM seaside-echo-default as smoke
