--- a/viridian/algae/docker/compose.local.yml
+++ b/viridian/algae/docker/compose.local.yml
@@ -1,7 +1,8 @@
-version: "3.3"
+version: "3.9"
 
 services:
   algae:
+    image: seaside-algae-smoke-local
     extends:
       file: compose.base.yml
       service: algae
@@ -38,6 +39,7 @@ services:
         ipv4_address: 10.87.65.100
 
   whirlpool:
+    image: seaside-algae-whirlpool-local
     extends:
       file: compose.base.yml
       service: whirlpool
@@ -66,6 +68,7 @@ services:
         ipv4_address: 10.42.0.100
 
   echo:
+    image: seaside-echo
     extends:
       file: compose.base.yml
       service: echo
