--- a/viridian/algae/docker/compose.remote.yml
+++ b/viridian/algae/docker/compose.remote.yml
@@ -2,51 +2,36 @@ version: "3.9"
 
 services:
   algae:
+    image: seaside-algae-smoke-remote
     extends:
       file: compose.base.yml
       service: algae
     build:
       args:
         NETWORK_GATEWAY: 10.65.0.100
-    environment:
-      SEASIDE_ADDRESS: 10.87.65.87
-      LOCAL_ADDRESS: 10.65.0.65
-      ECHO_ADDRESS: 10.42.0.42
     networks:
       sea-client:
         ipv4_address: 10.65.0.65
     depends_on:
       whirlpool:
         condition: service_healthy
-      router:
-        condition: service_started
-
-  router:
-    extends:
-      file: compose.base.yml
-      service: router
-    container_name: seaside-internal-router
-    networks:
-      sea-client:
-        ipv4_address: 10.65.0.100
-      sea-router:
-        ipv4_address: 10.87.65.100
 
   whirlpool:
+    image: seaside-whirlpool-smoke-remote
     extends:
       file: compose.base.yml
       service: whirlpool
     build:
       args:
-        NETWORK_GATEWAY: 10.87.42.1
+        NETWORK_GATEWAY: 10.87.0.1
     environment:
-      SEASIDE_ADDRESS: 10.87.65.87
-      SEASIDE_EXTERNAL: 10.87.42.87
+      SEASIDE_EXTERNAL: 10.87.0.87
     networks:
-      sea-router:
-        ipv4_address: 10.87.65.87
+      sea-client:
+        ipv4_address: 10.65.0.87
       sea-server:
-        ipv4_address: 10.87.42.87
+        ipv4_address: 10.87.0.87
+
 
 networks:
   sea-client:
@@ -54,13 +39,8 @@ networks:
       config:
         - subnet: 10.65.0.0/24
           gateway: 10.65.0.1
-  sea-router:
-    ipam:
-      config:
-        - subnet: 10.87.65.0/24
-          gateway: 10.87.65.1
   sea-server:
     ipam:
       config:
-        - subnet: 10.87.42.0/24
-          gateway: 10.87.42.1
+        - subnet: 10.87.0.0/24
+          gateway: 10.87.0.1
