--- a/viridian/algae/docker/compose.unit.yml
+++ b/viridian/algae/docker/compose.unit.yml
@@ -1,12 +1,12 @@
-version: "3.3"
+version: "3.9"
 
 services:
   algae:
-    image: seaside-algae-sleeping
+    image: seaside-algae-default-sleeping
     privileged: true
     build:
       dockerfile: viridian/algae/docker/Dockerfile.algae
       context: ../../..
-      target: sleeping
+      target: default-sleeping
     environment:
       SEASIDE_ADDRESS: 10.65.0.65
