--- a/viridian/algae/docker/compose.local.yml
+++ b/viridian/algae/docker/compose.local.yml
@@ -3,6 +3,7 @@ version: "3.9"
 services:
   algae:
     image: seaside-algae-smoke-local
+    container_name: seaside-algae
     extends:
       file: compose.base.yml
       service: algae
@@ -14,9 +15,32 @@ services:
       LOCAL_ADDRESS: 10.65.0.65
       ECHO_ADDRESS: 10.42.0.42
       SEASIDE_SEAPORT: 8542
+      SEASIDE_CONNECTION_TIMEOUT: 30
     networks:
       sea-cli-int:
         ipv4_address: 10.65.0.65
+    depends_on:
+      algae-copy:
+        condition: service_healthy
+      disruptor:
+        condition: service_started
+
+  algae-copy:
+    image: seaside-algae-smoke-local
+    extends:
+      file: compose.base.yml
+      service: algae
+    deploy:
+      mode: replicated
+      replicas: 3
+    build:
+      args:
+        NETWORK_GATEWAY: 10.65.0.100
+    environment:
+      SEASIDE_ADDRESS: 10.87.65.87
+      SEASIDE_CONNECTION_TIMEOUT: 30
+    networks:
+      - sea-cli-int
     depends_on:
       whirlpool:
         condition: service_healthy
@@ -78,6 +102,18 @@ services:
     networks:
       sea-serv-ext:
         ipv4_address: 10.42.0.42
+
+  disruptor:
+    image: gaiaadm/pumba
+    container_name: network-disruptor
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    command: "-l info netem -d 1h loss -p 50 seaside-internal-router seaside-external-router"
+    depends_on:
+      int-router:
+        condition: service_started
+      ext-router:
+        condition: service_started
 
 
 networks:
