--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -52,6 +52,8 @@ format = "scripts.codestyle:format"
 test_unit = "scripts.test:test_unit"
 test_integration = "scripts.test:test_integration"
 test_smoke = "scripts.test:test_smoke"
+test_local = "scripts.test:test_local"
+test_remote = "scripts.test:test_remote"
 test_all = "scripts.test:test_all"
 compile = "scripts.process:compile"
 execute = "scripts.process:execute"
